[package]
name = "raster2svg"
version = "1.0.10"
authors = ["STPR"]
edition = "2018"
description = "A tool that use the contour_tracing library."
homepage = "https://github.com/STPR/raster2svg"
repository = "https://github.com/STPR/raster2svg"
readme = "README.md"
keywords = ["contour_tracing", "contour", "boundary", "tracing", "algorithm"]
categories = ["algorithms", "graphics", "multimedia::encoding", "multimedia::images"]
license = "EUPL-1.2"
exclude = ["example/*"]

[[bin]]
name = "raster2svg"
path = "src/main.rs"

[profile.release]
lto = true
#panic = "abort"
codegen-units = 1

[dependencies]
image = "0.23.9"
contour_tracing = "1.0.1"

[dependencies.clap]
version = "2.33.3"
default-features = false
features = ["yaml"]
