[package]
name = "raster2svg"
version = "1.0.13"
authors = ["STPR"]
edition = "2021"
rust-version = "1.58.1"
description = "A tool that use the contour_tracing library."
homepage = "https://github.com/STPR/raster2svg"
repository = "https://github.com/STPR/raster2svg"
readme = "README.md"
keywords = ["contour_tracing", "contour", "boundary", "tracing", "algorithm"]
categories = ["algorithms", "graphics", "multimedia::encoding", "multimedia::images"]
license = "EUPL-1.2"
exclude = [".gitignore", "example/*"]

[[bin]]
name = "raster2svg"
path = "src/main.rs"

[profile.release]
lto = true
#panic = "abort"
codegen-units = 1

[dependencies]
image = "0.24.0"
contour_tracing = { version = "1.0.11", features = ["array"] }

[dependencies.clap]
version = "2.34.0"
default-features = false
features = ["yaml"]
